// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accounting Module Snapshots > Accounting main component renders correctly 1`] = `
<div>
  <div
    class="w-full px-2 py-4 sm:px-0"
  >
    <div
      class="flex justify-between items-center mb-6"
    >
      <h2
        class="text-2xl font-bold text-gray-900"
      >
        Contabilidad
      </h2>
      <button
        class="inline-flex items-center gap-x-2 rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
      >
        <svg
          data-testid="plus-icon"
        />
        Añadir Movimiento
      </button>
    </div>
    <div>
      <div
        aria-orientation="horizontal"
        class="flex space-x-1 rounded-xl bg-blue-900/20 p-1 mb-6 max-w-md"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r6:"
          aria-selected="true"
          class="w-full rounded-lg py-2.5 text-sm font-medium leading-5 ring-white/60 ring-offset-2 ring-offset-blue-400 focus:outline-none focus:ring-2 bg-white text-blue-700 shadow"
          data-headlessui-state="selected"
          data-selected=""
          id="headlessui-tabs-tab-:r0:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Ingresos
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r8:"
          aria-selected="false"
          class="w-full rounded-lg py-2.5 text-sm font-medium leading-5 ring-white/60 ring-offset-2 ring-offset-blue-400 focus:outline-none focus:ring-2 text-gray-600 hover:bg-white/[0.12] hover:text-blue-900"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r2:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Gastos
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:ra:"
          aria-selected="false"
          class="w-full rounded-lg py-2.5 text-sm font-medium leading-5 ring-white/60 ring-offset-2 ring-offset-blue-400 focus:outline-none focus:ring-2 text-gray-600 hover:bg-white/[0.12] hover:text-blue-900"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r4:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Rentabilidad
        </button>
      </div>
      <div
        class="mt-2"
      >
        <div
          aria-labelledby="headlessui-tabs-tab-:r0:"
          class="rounded-xl bg-white p-3 shadow ring-white/60 ring-offset-2 ring-offset-blue-400 focus:outline-none focus:ring-2"
          data-headlessui-state="selected"
          data-selected=""
          id="headlessui-tabs-panel-:r6:"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="p-4"
          >
            <div
              class="flex justify-between items-center mb-4"
            >
              <h3
                class="text-lg font-medium text-gray-900"
              >
                Ingresos Mensuales Realizados
              </h3>
              <div
                class="text-right"
              >
                <p
                  class="text-sm text-gray-500"
                >
                  Total Ingresos
                </p>
                <p
                  class="text-xl font-bold text-green-600"
                >
                  1000
                  €
                </p>
              </div>
            </div>
            <div
              class="overflow-x-auto"
            >
              <table
                class="min-w-full divide-y divide-gray-200"
              >
                <thead
                  class="bg-gray-50"
                >
                  <tr>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                    >
                      Fecha
                    </th>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                    >
                      Cliente / Origen
                    </th>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                    >
                      Descripción
                    </th>
                    <th
                      class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
                    >
                      Importe
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="bg-white divide-y divide-gray-200"
                >
                  <tr>
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      1/12/2023
                    </td>
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
                    >
                      Cliente Test
                    </td>
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      Servicio de Limpieza
                    </td>
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-right font-medium text-green-600"
                    >
                      1000
                      €
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r2:"
          id="headlessui-tabs-panel-:r8:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r4:"
          id="headlessui-tabs-panel-:ra:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
    <div
      data-testid="add-transaction-modal"
    />
  </div>
</div>
`;

exports[`Accounting Module Snapshots > ExpensesPanel renders correctly with all sections 1`] = `
<div>
  <div
    class="p-4 space-y-8"
  >
    <div>
      <div
        class="flex justify-between items-center mb-4"
      >
        <h3
          class="text-lg font-medium text-gray-900"
        >
          Gastos Varios y Suministros
        </h3>
        <div
          class="text-right"
        >
          <p
            class="text-sm text-gray-500"
          >
            Total Varios
          </p>
          <p
            class="text-xl font-bold text-red-600"
          >
            500
            €
          </p>
        </div>
      </div>
      <div
        class="overflow-x-auto border rounded-lg"
      >
        <table
          class="min-w-full divide-y divide-gray-200"
        >
          <thead
            class="bg-gray-50"
          >
            <tr>
              <th
                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Fecha
              </th>
              <th
                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Concepto
              </th>
              <th
                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Importe
              </th>
              <th
                class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Justificante
              </th>
            </tr>
          </thead>
          <tbody
            class="bg-white divide-y divide-gray-200"
          >
            <tr>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
              >
                2/12/2023
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
              >
                Gasto Test 1
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-right text-red-600"
              >
                500
                €
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-center"
              >
                <span
                  class="text-gray-400"
                >
                  -
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div
        class="flex justify-between items-center mb-4"
      >
        <h3
          class="text-lg font-medium text-gray-900"
        >
          Estimación Nóminas (Mensual)
        </h3>
        <div
          class="text-right"
        >
          <p
            class="text-sm text-gray-500"
          >
            Total Nóminas
          </p>
          <p
            class="text-xl font-bold text-red-600"
          >
            1500
            €
          </p>
        </div>
      </div>
      <div
        class="overflow-x-auto border rounded-lg"
      >
        <table
          class="min-w-full divide-y divide-gray-200"
        >
          <thead
            class="bg-gray-50"
          >
            <tr>
              <th
                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Empleado
              </th>
              <th
                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Puesto
              </th>
              <th
                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Coste Estimado
              </th>
            </tr>
          </thead>
          <tbody
            class="bg-white divide-y divide-gray-200"
          >
            <tr>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
              >
                Empleado Test
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
              >
                Operario
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-right text-red-600"
              >
                1500
                €
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div
        class="flex justify-between items-center mb-4"
      >
        <h3
          class="text-lg font-medium text-gray-900"
        >
          Valoración Inventario (Stock Total)
        </h3>
        <div
          class="text-right"
        >
          <p
            class="text-sm text-gray-500"
          >
            Valor Total Stock
          </p>
          <p
            class="text-xl font-bold text-orange-600"
          >
            50
            €
          </p>
        </div>
      </div>
      <div
        class="overflow-x-auto border rounded-lg"
      >
        <table
          class="min-w-full divide-y divide-gray-200"
        >
          <thead
            class="bg-gray-50"
          >
            <tr>
              <th
                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Producto
              </th>
              <th
                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Cantidad
              </th>
              <th
                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Coste Unit. Est.
              </th>
              <th
                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
              >
                Valor Total
              </th>
            </tr>
          </thead>
          <tbody
            class="bg-white divide-y divide-gray-200"
          >
            <tr>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
              >
                Producto Test
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-right text-gray-500"
              >
                10
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-right text-gray-500"
              >
                5
                €
              </td>
              <td
                class="px-6 py-4 whitespace-nowrap text-sm text-right text-orange-600"
              >
                50
                €
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accounting Module Snapshots > IncomePanel empty state renders correctly 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="flex justify-between items-center mb-4"
    >
      <h3
        class="text-lg font-medium text-gray-900"
      >
        Ingresos Mensuales Realizados
      </h3>
      <div
        class="text-right"
      >
        <p
          class="text-sm text-gray-500"
        >
          Total Ingresos
        </p>
        <p
          class="text-xl font-bold text-green-600"
        >
          0
          €
        </p>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Fecha
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Cliente / Origen
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Descripción
            </th>
            <th
              class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Importe
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr>
            <td
              class="px-6 py-4 text-center text-gray-500"
              colspan="4"
            >
              No hay ingresos registrados
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Accounting Module Snapshots > IncomePanel renders correctly with data 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="flex justify-between items-center mb-4"
    >
      <h3
        class="text-lg font-medium text-gray-900"
      >
        Ingresos Mensuales Realizados
      </h3>
      <div
        class="text-right"
      >
        <p
          class="text-sm text-gray-500"
        >
          Total Ingresos
        </p>
        <p
          class="text-xl font-bold text-green-600"
        >
          1000
          €
        </p>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Fecha
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Cliente / Origen
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Descripción
            </th>
            <th
              class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
            >
              Importe
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
            >
              1/12/2023
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
            >
              Cliente Test
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
            >
              Servicio de Limpieza
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-right font-medium text-green-600"
            >
              1000
              €
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
